fixed css spacing for registration, removed demo buttons, updated readme and project plan

--- a/capstone-ui/src/components/About/About.css
+++ b/capstone-ui/src/components/About/About.css
@@ -101,11 +101,15 @@
   opacity: 0;
   transition: opacity 0.3s;
   display: flex;
-  font-size: 1rem;
+  font-size: 0.7rem;
   pointer-events: none;
   align-items: center; /* Center vertically */
   justify-content: center; /* Center horizontally */
   margin-bottom:2vh;
+  /* added these: */
+  /* TODO: FIX WIDTH/HEIGHT FOR TEXT */
+  /* width: 70%; */
+  height: 80%;
 }
 .all_creators {
   display: flex;
